# otus_cpp_helloworld

./: .travis.yml  CMakeLists.txt  main.cpp  test_helloworld.cpp  ver_lib.cpp
